--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ matrix:
   include:
     - os: linux
       python: "2.7"
-      env: SCRIPT=ci_lint.sh
+      env: SCRIPT=tools/ci/lint.sh
     - os: linux
       python: "2.7"
-      env: SCRIPT=ci_built_diff.sh
+      env: SCRIPT=tools/ci/built_diff.sh
     - os: linux
       python: "2.7"
       env: SCRIPT=css/build-css-testsuites.sh
@@ -40,7 +40,7 @@ matrix:
             - libnss3-tools
       env:
         - secure: "YTSXPwI0DyCA1GhYrLT9KMEV6b7QQKuEeaQgeFDP38OTzJ1+cIj3CC4SRNqbnJ/6SJwPGcdqSxLuV8m4e5HFFnyCcQnJe6h8EMsTehZ7W3j/fP9UYrJqYqvGpe3Vj3xblO5pwBYmq7sg3jAmmuCgAgOW6VGf7cRMucrsmFeo7VM="
-        - SCRIPT=ci_stability.sh PRODUCT=firefox:nightly
+        - SCRIPT=tools/ci/stability.sh PRODUCT=firefox:nightly
     - os: linux
       sudo: required
       python: "2.7"
@@ -51,22 +51,22 @@ matrix:
             - fonts-liberation
       env:
         - secure: "YTSXPwI0DyCA1GhYrLT9KMEV6b7QQKuEeaQgeFDP38OTzJ1+cIj3CC4SRNqbnJ/6SJwPGcdqSxLuV8m4e5HFFnyCcQnJe6h8EMsTehZ7W3j/fP9UYrJqYqvGpe3Vj3xblO5pwBYmq7sg3jAmmuCgAgOW6VGf7cRMucrsmFeo7VM="
-        - SCRIPT=ci_stability.sh PRODUCT=chrome:unstable
+        - SCRIPT=tools/ci/stability.sh PRODUCT=chrome:unstable
     - python: 2.7
-      env: TOXENV=py27 HYPOTHESIS_PROFILE=ci SCRIPT=ci_unittest.sh
+      env: TOXENV=py27 HYPOTHESIS_PROFILE=ci SCRIPT=tools/ci/unittest.sh
     - python: 3.5
-      env: TOXENV=py35 HYPOTHESIS_PROFILE=ci SCRIPT=ci_unittest.sh
+      env: TOXENV=py35 HYPOTHESIS_PROFILE=ci SCRIPT=tools/ci/unittest.sh
     - python: 3.6
-      env: TOXENV=py36 HYPOTHESIS_PROFILE=ci SCRIPT=ci_unittest.sh
+      env: TOXENV=py36 HYPOTHESIS_PROFILE=ci SCRIPT=tools/ci/unittest.sh
     - python: pypy
-      env: TOXENV=pypy HYPOTHESIS_PROFILE=ci_pypy SCRIPT=ci_unittest.sh
+      env: TOXENV=pypy HYPOTHESIS_PROFILE=ci_pypy SCRIPT=tools/ci/unittest.sh
   exclude:
     - env:  # exclude empty env from the top-level above
   allow_failures:
     - env: SCRIPT=css/build-css-testsuites.sh
     - env:
         - secure: "YTSXPwI0DyCA1GhYrLT9KMEV6b7QQKuEeaQgeFDP38OTzJ1+cIj3CC4SRNqbnJ/6SJwPGcdqSxLuV8m4e5HFFnyCcQnJe6h8EMsTehZ7W3j/fP9UYrJqYqvGpe3Vj3xblO5pwBYmq7sg3jAmmuCgAgOW6VGf7cRMucrsmFeo7VM="
-        - SCRIPT=ci_stability.sh PRODUCT=chrome:unstable
+        - SCRIPT=tools/ci/stability.sh PRODUCT=chrome:unstable
 script:
   - bash $SCRIPT
 cache:
